[package]
name = "task-management-be"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.4.0"
sqlx = { version = "0.5.13", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1", features = ["full"] }
mysql = "20.0"
mongodb = "2.2" 
dotenv = "0.15"
env_logger = "0.10"
derive_builder = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
futures = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand_core = "0.6"
chrono-tz = "0.8"
password-hash = "0.5"
tracing = "0.1.41"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
uuid = "1.16.0"
nanoid = "0.4"
tempfile = "3.19.1"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }


